--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.12.2",
     "dotenv": "^17.2.2",
     "jwt-decode": "^4.0.0",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "sweetalert2": "^11.23.0"
