--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sweetalert2": "^11.23.0"
+    "sweetalert2": "^11.23.0",
+    "technoai-reactjs": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
